# picogl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clang-format.txt
cmake/: glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  spdlog.cmake  stb.cmake  tinyobjloader.cmake
example/: CMakeLists.txt  main.cpp
include/: picogl.hpp
include/framework/: image.h  renderers.h
include/picogl/: picogl.hpp
include/picogl/framework/: application.h  asset_io.h  image.h  renderers.h  viewport.h
src/: picogl.hpp
src/framework/: application.cpp  asset_io.cpp  camera.cpp  renderers.cpp  viewport.cpp
src/framework/include/: application.h  asset_io.h  camera.h  viewport.h
src/framework/shaders/: cube_map.frag  grid.frag  mesh_interface.vert  mesh_multi_draw.vert  phong.frag  raymarching.frag  screen_quad.vert  single_color.frag  texture.frag  uber_shading_multi.frag
src/framework/src/: asset_io.cpp
